syntax = "proto3";

package csv;

// The greeting service definition.
service Csv {
  // Sends a greeting
  rpc ImportData (ImportDataRequest) returns (ImportDataReply) {}
  rpc Test (TestRequest) returns (TestResponse) {}
}

// The request message containing the filePath and tableName
message ImportDataRequest {
  string fileName = 1;
  string tableName = 2;
}

// The response message containing the 
message ImportDataReply {
  string message = 1;
}

message TestRequest {
  string num = 1;
  string num = 2;
}

message TestResponse {
  string state = 1;
  string state = 2;
}